@@ -14,7 +14,7 @@ EBUILD gitlab-gitaly-0.21.2.ebuild 913 SHA256 1c6a2f37b5abbe2cb0c74cf4d93551f660
 EBUILD gitlab-gitaly-0.3.0.ebuild 769 SHA256 1d57371bbc733d91a09d10fce9dc9a65f2ed568b65b4f5030a9260e79a576612 SHA512 99d12861b25d061178c93cc7b3db880062bc1b56bf66425b923ddd42a463e004269551e708862bac51a081fe274e6fc48c72cbcabf3c4f77970d0d8c660aa452 WHIRLPOOL 522aa5490ec96a3c992d7ade05471b838ecfc5417950046ee9d9689f9fc30c33ab878fedd50fba02b89df18188dfec8d6c3bc7de3bfcbea316248746d066f804
 EBUILD gitlab-gitaly-0.35.0-r2.ebuild 1143 SHA256 f27758444fefb15b9ea55cc9be68e8b47fdf5c6794b9ed32cadc95690b2dfd62 SHA512 5b7117c6a5c91e0168c495a18c08c815ae423dcebce644264d9161692ede29469c6585acfde682b0d60ccab6efa601a0259d2b44ceb5cc15a26096a2bfc318a8 WHIRLPOOL 8911c39960635981e0baa62cdf3425acc9f7167df940f4c43c52dbe020b208ad3192a01bf5f198ae0777cf5af27cc8e643455b30c1e0be3326a56aab1c3c8e10
 EBUILD gitlab-gitaly-0.38.0-r1.ebuild 1035 SHA256 c667625968e0cb0530679184353724687bc193c0a8166fea0d9f8a516ce6db40 SHA512 e585a18c64a2e8aca2796c45066e1b1113cba9320a47f9af638fce171ac362060edac4216e7259628433e5b5facaebbf876bf807dd99f80ebd8c88e7cb726992 WHIRLPOOL 7f329f60fce603e61ebf90cc2aa0182d58574d449f096f3cf59c4751f1db9d5eb856d1fa0ee67c565d392261e45c784e25a3b4014f9a44857c31ca04af8cb70f
-EBUILD gitlab-gitaly-0.43.1.ebuild 1035 SHA256 814eea68a2bb03b9bd4dd63bfaea9dea3c18a558cd19fe96c9a52bd47bca75d4 SHA512 2ea60a116a708f90df7c4e54da9a94e1003cae8267d2c466f23199513b7e5d219444e735f3360c1ab31dfd0e21e0a1cf2cf4760e43f72d2bcb9245c288dcfa95 WHIRLPOOL 039868ec759003a7f4f2497e493ba54dc5c38b78fd3d036aacc471444a66d61e0a20db6159a7e67b30f7747cdb432d2584ef3f29fb7eecd9ccff7f947659e846
+EBUILD gitlab-gitaly-0.43.1.ebuild 1053 SHA256 5bfd3f68761500a5d5c5a029472919590be7dc4c50b48d8289b15d370ffdc5f5 SHA512 d4932af6e325935bf233b1f784c9127f4ac11819c5d97e474b68bcacdf2b287a1b2618eebd913fae6113375357e37266895a140fcc129cd32b71e05ea7cec73a WHIRLPOOL a9b409aa5559a64647cb7acfca3888b5d6c87f333fd0632ebd6ade7e1f27e20477dd0c6761154636ee211ae5caf1aed721e4338dfc61c4fc43aabc4ecc4e47d1
 EBUILD gitlab-gitaly-0.6.0.ebuild 769 SHA256 601ca500d12250325bf6f924d53b28cb120cc75da9b9e1d83cd4c9317aa1ee91 SHA512 1263c919fb3c126a0ba5dda2b9da45b0a16b6bb703ec4260b11b40463fcfedd1249389272ab638d25ced351a63c0812c0cbc7ea035f9c2250d2eb79786424c2d WHIRLPOOL 261dfdd551dad839d687b2092027de33e95142e1ed7336fd6513742044ff219353743988aefad8e5da6850a8e1c8d5b44baf08c6702960a829673cfc5580e152
-MISC ChangeLog 4304 SHA256 b167d8049790461e3183f45e5ef85131dcf2f9ab3d7d75d1d64978b183e6c5df SHA512 98d1c528977ec577a152c081658a138e4648e009effeb0c588bd97af56d2c06007c25c5dc1e18bc15f45210c8e2090f56e870b6ee0a714810bb75452a69e87a6 WHIRLPOOL a43f603799af3065e909359f1a1013bc57cc89d345860a7bff0e3619aa3e8713f7811befd93cea7749d58c42c6ac8bf36cd43328cecbf647767ba50047b84437
+MISC ChangeLog 4448 SHA256 3b291835cdd9847fee8d441e909fad2aa6ea6214bc4b6739627d964cdbd0d951 SHA512 a6048e375ca3c92b813d04f25b01158fc7093895a5cb4fe2af6cb9f38fd08fcf3531d2fccab807ae3445382ed61460bb3d6f22a81b7c42796593493827219d8b WHIRLPOOL e8a1dfb47dfcef8de79bcc4005988b7030e36438525b513d2a8b308616c1b22f388d970298701e1261fe72bbe94017647ce0aaebf930925bf5e6a3e31351590d
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
