@@ -1,4 +1,4 @@
-# Copyright 1999-2017 Gentoo Foundation
+# Copyright 1999-2018 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI="5"
@@ -14,7 +14,8 @@ LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 ~x86 ~arm"
 
-DEPEND=">=dev-lang/go-1.8.3"
+DEPEND=">=dev-lang/go-1.8.3
+	dev-ruby/bundler"
 RDEPEND="${DEPEND}"
 
 src_prepare() {
